work on the build

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       .node rect {
         fill: none;
         stroke: steelblue;
-        stroke-width: 1.5px;
+        stroke-width: .2px;
       }
     </style>
   </head>
