--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <script src="lib/d3.min.js"></script>
     <script src='flextree.js'></script>
     <style>
+      svg {
+        border: 1px solid blue;
+      }
       .node rect {
         fill: none;
         stroke: steelblue;
-        stroke-width: .2px;
+        stroke-width: 1px;
       }
     </style>
   </head>
